examples/containeraws/namespaced/provider-aws/00-containeraws-network.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: containeraws-gcp-upbound-route-inet-gateway-a
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: containeraws-gcp-upbound-internet-gateway
    region: my-aws-region
    routeTableIdRef:
      name: containeraws-gcp-upbound-route-table-public-a
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: containeraws-gcp-upbound-route-nat-gateway-a
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: containeraws-gcp-upbound-nat-a
    region: my-aws-region
    routeTableIdRef:
      name: containeraws-gcp-upbound-route-table-private-a
